# adsensei

./: .dockerignore  .env.example  .gitignore  .replit  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  replit.md  setup_ai_ads.sh  tailwind.config.ts  test-setup.ts  verify_setup.sh  vitest.config.ts
.github/workflows/: ci.yml
client/: index.html  package.json
client/src/: App.tsx  index.css
client/src/components/: ai-copy-generator.tsx  ai-image-generator.tsx  campaign-card.tsx  campaign-suggestions.tsx  error-boundary.tsx  hero.tsx  instagram-connect.tsx  navigation.tsx  template-card.tsx
client/src/components/__tests__/: button.test.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: openai.ts
client/src/pages/: analytics.tsx  campaigns.tsx  clients.tsx  create-ad.tsx  dashboard.tsx  landing.tsx  login.tsx  onboarding.tsx  products.tsx  templates.tsx
migrations/: .gitkeep
python_services/: DATABASE_SCHEMA.md  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  simple_image_service.py  start.py  start_standalone.sh  test_api.py  test_curl.sh  test_standalone.py
python_services/models/: schemas.py
python_services/models/database/: models.py
python_services/services/: ad_generator.py  evaluator.py  logger.py  platform_optimizer.py  scheduler.py
server/: database-storage.ts  index.ts  package.json  routes.ts  storage.ts
server/lib/: encryption.ts  instagram.ts  logger.ts  openai.ts
server/middleware/: security.ts
shared/: schema.ts
